Rename campaign package, update stuff

--- a/public/editorCanvas.css
+++ b/public/editorCanvas.css
@@ -1,8 +1,8 @@
-.loyally-placeholder {
+.loyalty-placeholder {
     font-style: italic;
 }
 
-.loyally-placeholder:hover {
+.loyalty-placeholder:hover {
     background-color: #0aef75;
     text-decoration: none;
 }
