--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
+  height: 64px;
 }
 
 .navbar a {
@@ -33,3 +34,7 @@
   background-color: #0b5ed5;
   color: white;
 }
+
+.page-icon {
+}
+.page-view {}
