--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  margin-bottom: 58px;
 }
 
 .ErrorMessage {
@@ -8,19 +9,18 @@
 }
 
 .navbar {
+  display: table;
   background-color: #333;
-  overflow: hidden;
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 64px;
 }
 
 .navbar a {
-  display: block;
+  display: table-cell;
   color: #c6c6c6;
   text-align: center;
-  padding: 14px 16px;
+  padding: 7px;
   font-size: 16px;
   text-decoration: none;
 }
@@ -35,6 +35,9 @@
   color: white;
 }
 
-.page-icon {
+.pageIcon {
+  width: 40px;
+  margin: auto;
+  display: block;
 }
 .page-view {}
