--- a/src/App.css
+++ b/src/App.css
@@ -40,4 +40,9 @@
   margin: auto;
   display: block;
 }
-.page-view {}
+
+.page-holder {
+  bottom: 58px;
+  width: 100%;
+  height: calc(100vh - 58px);
+}
