--- a/src/components/notification/PopupNotification.css
+++ b/src/components/notification/PopupNotification.css
@@ -3,11 +3,11 @@
   transition-duration: 0.3s;
   opacity: 0;
   z-index: 2;
-  width: 72%;
+  width: 80%;
   max-width: 360px;
   height: fit-content;
-  min-height: 8%;
-  max-height: 110px;
+  min-height: 9%;
+  max-height: 100px;
   left: 0;
   right: 0;
   top: 7%;
@@ -15,8 +15,13 @@
   margin-right: auto;
   position: fixed;
   align-items: center;
-  border: solid #1d1d1d 1px;
-  background-color: rgba(30, 200, 220, 0.9);
+  border: solid #939393 1px;
+  border-radius: 5px;
+  background-color: rgb(30, 200, 220);
+
+  /* Font stuff */
+  font-size: 24px;
+  color: #3c3c3c;
 }
 
 .active {
@@ -24,9 +29,9 @@
 }
 
 .success {
-  background-color: rgba(1, 156, 102, 0.9);
+  background-color: rgb(1, 156, 102);
 }
 
 .error {
-  background-color: rgba(177, 60, 60, 0.9);
+  background-color: rgb(177, 60, 60);
 }
