--- a/loyalty-app/src/App.css
+++ b/loyalty-app/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   margin-bottom: 58px;
+  display: flex;
 }
 
 .ErrorMessage {
@@ -10,47 +11,8 @@
   color: orangered;
 }
 
-.navbar {
-  display: table;
-  background-color: #333;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-.navbar a {
-  display: table-cell;
-  color: #E0E0E0;
-  text-align: center;
-  font-size: 16px;
-  text-decoration: none;
-}
-
-.navbar .active {
-  border-bottom: #1976D2 solid 4px !important;
-  color: black;
-}
-
-.navbar .active .pageIcon svg {
-  fill: #ffffff;
-}
-
-.navbar .pageIcon svg {
-  fill: #9e9e9e;
-}
-
-.navlink {
-  border: solid #212121 1px;
-  padding: 4px;
-}
-
-.pageIcon {
-  width: 28px;
-  margin: auto;
-  display: block;
-}
-
 .page-view {
+  min-width: 65%;
 }
 
 .page-holder {
