--- a/loyalty-app/src/App.css
+++ b/loyalty-app/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   margin-bottom: 58px;
   display: flex;
+  font-size: 1em;
 }
 
 .ErrorMessage {
@@ -12,7 +13,8 @@
 }
 
 .page-view {
-  min-width: 65%;
+  width: 100%;
+  max-width: max(900px, 55%);
 }
 
 .page-holder {
