--- a/loyalty-app/src/components/notification/PopupNotification.css
+++ b/loyalty-app/src/components/notification/PopupNotification.css
@@ -2,6 +2,7 @@
   transition-timing-function: ease-in;
   transition-duration: 0.3s;
   opacity: 0;
+  display: none;
   z-index: 2;
   width: 80%;
   max-width: 360px;
@@ -26,6 +27,7 @@
 
 .active {
   opacity: 1;
+  display: initial;
 }
 
 .success {
