--- a/loyalty-app/src/components/navbar/Navbar.css
+++ b/loyalty-app/src/components/navbar/Navbar.css
@@ -92,7 +92,8 @@
 
 .navbar-hr {
   height: 1px;
-  width: 100%;
+  width: 110%;
+  margin-left: -5%;
   color: #dbdbdb;
   background-color: #dbdbdb;
   border: none;
@@ -102,7 +103,7 @@
   display: flex;
   text-decoration: none;
   font-size: 22px;
-  margin: 10px;
+  margin: 10px 0;
   padding: 20px 20px 0 0;
   border-bottom: solid #959595 1px;
 }
