--- a/panel/public/templates/common_main.css
+++ b/panel/public/templates/common_main.css
@@ -1,3 +1,56 @@
 body {
   background-color: black;
+  min-height: 1050px;
+}
+
+body::before {
+  background: linear-gradient(
+          rgba(0, 0, 0, 0.4),
+          rgba(0, 0, 0, 0.4)
+  ), url(https://images.unsplash.com/photo-1525193612562-0ec53b0e5d7c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80);
+  background-position-y: center;
+  background-position-x: right;
+  content: "";
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  display: block;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  -webkit-filter: blur(2px);
+  filter: blur(2px);
+}
+
+@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+  .page-modal {
+    /* For some reason these do not work (at least) with chrome atm. Or something else is wrong
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.5);
+     */
+  }
+}
+
+.gjs-row {
+  display: table;
+  padding: 10px;
+  width: 100%;
+}
+
+.gjs-cell {
+  width: 8%;
+  display: table-cell;
+  height: 75px;
+}
+
+.page-modal {
+  text-align: center;
+  margin: 10px auto;
+  width: 90%;
+  border-radius: 7px;
+  color: rgb(47, 47, 47);
+  max-width: 700px;
+  background-color: rgba(189, 188, 188, 0.85); /* Fallback */
 }
