--- a/panel/public/templates/common_main.css
+++ b/panel/public/templates/common_main.css
@@ -1,12 +1,12 @@
 body {
-  background-color: black;
+  background-color: black !important;
   min-height: 1050px;
 }
 
 body::before {
   background: linear-gradient(
-          rgba(0, 0, 0, 0.4),
-          rgba(0, 0, 0, 0.4)
+          rgba(0, 0, 0, 0.5),
+          rgba(0, 0, 0, 0.5)
   ), url(https://images.unsplash.com/photo-1525193612562-0ec53b0e5d7c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80);
   background-position-y: center;
   background-position-x: right;
@@ -19,18 +19,8 @@ body::before {
   background-size: cover;
   width: 100%;
   height: 100vh;
-  -webkit-filter: blur(2px);
-  filter: blur(2px);
-}
-
-@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
-  .page-modal {
-    /* For some reason these do not work (at least) with chrome atm. Or something else is wrong
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-    background-color: rgba(255, 255, 255, 0.5);
-     */
-  }
+  -webkit-filter: blur(4px);
+  filter: blur(4px);
 }
 
 .gjs-row {
@@ -52,5 +42,5 @@ body::before {
   border-radius: 7px;
   color: rgb(47, 47, 47);
   max-width: 700px;
-  background-color: rgba(189, 188, 188, 0.85); /* Fallback */
+  background-color: rgba(189, 188, 188, 0.85) !important;
 }
