style and typos

--- a/panel/public/templates/common_main.css
+++ b/panel/public/templates/common_main.css
@@ -1,7 +1,9 @@
 /* Import custom fonts here */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
 
-/** Background and other stuff */
+:root {
+  --backgroundImage: url(https://images.unsplash.com/photo-1525193612562-0ec53b0e5d7c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80);
+}
 
 body {
   background-color: black !important;
@@ -13,7 +15,7 @@ body::before {
   background: linear-gradient(
           rgba(0, 0, 0, 0.5),
           rgba(0, 0, 0, 0.5) /* Change the url below to change the background image */
-  ), url(https://images.unsplash.com/photo-1525193612562-0ec53b0e5d7c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80);
+  ), var(--backgroundImage);
   background-position-y: center;
   background-position-x: right;
   content: "";
@@ -41,14 +43,14 @@ body::before {
 
 /* Common text on page. Usually on top of the background*/
 .page-text {
-  color: #c0c0c0;
+  color: #d2d2d2;
   font-size: 20px;
 }
 
 /* Smaller text on top of the background. */
 .page-small-text {
   color: #a2a2a2;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 /* Modal/card/paper on the pages. For example, the grayish cards on the campaigns page. */
