style: css and text changes

--- a/loyalty-app/src/App.css
+++ b/loyalty-app/src/App.css
@@ -16,6 +16,7 @@
   min-height: 100vh;
   width: 100%;
 }
+
 #pages > div {
   min-height: 100vh;
 }
@@ -23,7 +24,9 @@
 
 .page-view {
   width: 100%;
+  overflow-x: hidden;
   max-width: max(900px, 55%);
+  min-height: 100%;
 }
 
 .page-holder {
